[package]
name = "async-test"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/async-test"
documentation = "https://docs.rs/async-test"
description = "Async testing utilities"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
async-std = "1.5.0"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"

[dev-dependencies]
